# TCPServer

./: CMakeLists.txt  server_main.cpp
Server/: Broker.cpp  Broker.h  Dispatcher.cpp  Dispatcher.h  TCPMessengerServer.cpp  TCPMessengerServer.h  UserManager.cpp  UserManager.h
files/: users
utils/: File.cpp  File.h  FileInterface.cpp  FileInterface.h  MThread.cpp  MThread.h  MultipleTCPSocketListener.cpp  MultipleTCPSocketListener.h  Socket.cpp  Socket.h  TCPMessengerProtocol.h  TCPSocket.cpp  TCPSocket.h
